# heater-cc

./: .gitignore  CMakeLists.txt  README.md  heater.cc  kernel.cl  kernel.cl.h
.cache/clangd/index/: heater.cc.878A285DEB968929.idx
